@@ -4804,7 +4804,6 @@ Reportez-vous à la<block ref="9394861c48a8d6b1dd64975c2c0558db" category="inlin
   <block id="0882685275009e45f6167bce4081e668" category="list-text">Révision et création de la stratégie d'accès.</block>
   <block id="1f8370f663ec71e8fac7dc386794543c" category="admonition">Incluez le<block ref="d740baa07e4af19d0de1f45650cf4bc0" prefix=" " category="inline-code"></block> si vous avez créé cette ressource à utiliser pour le cryptage du compte de stockage.</block>
   <block id="57a3061930625af99195891e9e561fb2" category="cell">9.13.1</block>
-  <block id="24eacd330f66ba30cc845660c1efa967" category="list-text">Pour les versions de correctif (P), vous pouvez mettre à niveau d'une version vers n'importe quelle version P de la prochaine version.</block>
   <block id="99430eacf0d5244d50939eea94bd5962" category="paragraph">Voici quelques exemples :</block>
   <block id="1893a0478b381d08866888a1c7f8607a" category="list-text">9.13.0 &gt; 9.13,1 P15</block>
   <block id="4ae2d614cc725ba442c80c740c08f75f" category="list-text">9.12.1 &gt; 9,13,1 P2</block>
@@ -5195,10 +5194,18 @@ Reportez-vous à la<block ref="9394861c48a8d6b1dd64975c2c0558db" category="inlin
   <block id="9864c286612d20c437e06d1612a86f2d" category="summary">BlueXP crée des groupes de sécurité AWS qui incluent les règles entrantes et sortantes nécessaires au bon fonctionnement de Cloud Volumes ONTAP. Vous pouvez consulter les ports à des fins de test ou si vous préférez utiliser vos propres groupes de sécurité.</block>
   <block id="87ade7583253b06f01182c970d65aacd" category="paragraph">BlueXP crée des règles de pare-feu Google Cloud qui incluent les règles entrantes et sortantes nécessaires au bon fonctionnement de Cloud Volumes ONTAP. Vous pouvez vous référer aux ports à des fins de test ou si vous préférez utiliser vos propres règles de pare-feu.</block>
   <block id="f297f6161ef6c027c4e0cd622d4c9f53" category="paragraph">La fonctionnalité ARP est disponible uniquement pour les licences BYOL (d'une durée de 1 à 36 mois), sur les modèles de licence basés sur les nœuds et la capacité. Vous devez contacter votre représentant commercial NetApp pour acheter une nouvelle licence d'extension séparée à utiliser avec la fonctionnalité ARP de Cloud Volumes ONTAP.</block>
-  <block id="69f67d4caf75d0a80b925b65a04419a0" category="paragraph">La licence ARP est considérée comme une licence « flottante », ce qui signifie qu'elle n'est pas liée à une seule instance Cloud Volumes ONTAP et peut être appliquée à plusieurs environnements Cloud Volumes ONTAP.</block>
   <block id="9edc62814e18ad5dad22ed4f08602be6" category="admonition">L'utilisation de la fonction ARP avec les licences Cloud Volumes ONTAP basées sur les nœuds n'est pas actuellement reflétée dans le portefeuille digital. La possibilité d'afficher l'utilisation du protocole ARP basé sur les nœuds sera disponible dans une prochaine version sous le portefeuille digital.</block>
   <block id="36228eb2dbf48b5f5e080f1abf747714" category="paragraph">Lors de l'achat d'une licence complémentaire et de son ajout au portefeuille digital, vous pouvez activer le protocole ARP par volume avec Cloud Volumes ONTAP. Le chargement du protocole ARP est mesuré au niveau du volume, en fonction de la capacité totale provisionnée des volumes pour lesquels la fonctionnalité ARP est activée. La capacité minimale de licence est de 1 To. Cependant, il n'y a pas de charge de capacité minimale pour la fonction ARP.</block>
-  <block id="2a51dc407e4b9108dfb0e2caff776939" category="paragraph">Les volumes ARP activés ont un état désigné « mode apprentissage » ou « actif ». Tout volume dont l'état ARP est « désactivé » est exclu de la charge. Par exemple, un environnement Cloud Volumes ONTAP avec 30 Tio de capacité provisionnée peut choisir d'avoir uniquement un sous-ensemble de volumes de 15 Tio avec ARP activé.</block>
   <block id="bab89553328d9045a17e6cd7ae426ebe" category="paragraph">La configuration du protocole ARP pour les volumes s'effectue via ONTAP System Manager et l'interface de ligne de commande ONTAP.</block>
   <block id="41040f9c93f65d2edb4f6b2d1dc680a4" category="admonition">Le stockage et l'utilisation du réseau sont calculés en gigaoctets binaires (Go), où 1 Go correspond à 2^30 octets. Cette unité de mesure est également appelée gibioctet (Gio). De même, 1 To correspond à 2^40 octets, soit 1024 Go.</block>
+  <block id="35588fa7f53bdbd040bfa9c96c87bf3d" category="section-title">16 janvier 2024</block>
+  <block id="9ed7d4ae8d042664394e899e9c1f5e9a" category="section-title">Versions de correctifs dans BlueXP</block>
+  <block id="5c04c0351e9f1e168f13ca5689c21d92" category="paragraph">Les versions de correctifs sont disponibles dans BlueXP uniquement pour les trois dernières versions d'Cloud Volumes ONTAP.</block>
+  <block id="debc8fcbe9103b95d21857d1276dbb26" category="paragraph"><block ref="debc8fcbe9103b95d21857d1276dbb26" category="inline-link-macro-rx"></block></block>
+  <block id="fa8624c42ea6d2ce73d1dbb434c41dc8" category="paragraph">La licence ARP est considérée comme une licence « flottante », ce qui signifie qu'elle n'est pas liée à une seule instance Cloud Volumes ONTAP et peut être appliquée à plusieurs environnements Cloud Volumes ONTAP.</block>
+  <block id="a7453af7846f7db9aba5aa90fa8093e5" category="paragraph">Les volumes ARP activés ont un état désigné « mode apprentissage » ou « actif ». Tout volume dont l'état ARP est « désactivé » est exclu de la charge. Par exemple, un environnement Cloud Volumes ONTAP avec 30 Tio de capacité provisionnée peut choisir d'avoir uniquement un sous-ensemble de volumes de 15 Tio avec ARP activé.</block>
+  <block id="677ee5101eb2acd8a357643d03784fa7" category="section-title">Versions de correctifs</block>
+  <block id="25163e975710186a452c0f2fefe81448" category="inline-xref">Téléchargement de l'image ONTAP</block>
+  <block id="17464ff13145a21ed61cc7a0b9513ce7" category="paragraph">À partir de janvier 2024, les mises à niveau de correctifs ne sont disponibles dans BlueXP que s'il s'agit d'une version de correctif pour les trois dernières versions d'Cloud Volumes ONTAP. Nous utilisons la dernière version de la version GA pour déterminer les trois dernières versions à afficher dans BlueXP. Par exemple, si la version GA actuelle est 9.13.1, les correctifs pour la version 9.11.1-9.13.1 apparaissent dans BlueXP. Si vous souhaitez effectuer une mise à niveau vers une version de correctif pour les versions 9.11.1 ou inférieures, vous devez utiliser la procédure de mise à niveau manuelle de <block ref="741f5e59386960528e5ac58506855727" category="inline-xref-macro-rx"></block>.</block>
+  <block id="b0b450f5a78908e6b78f5c13bf6b0da4" category="paragraph">En règle générale pour les versions de correctif (P), vous pouvez mettre à niveau d'une version vers n'importe quelle version P de la version actuelle ou de la version suivante.</block>
 </blocks>
